test/indexOutOfBounds7.slq
// args: --run

def main(){
	x:=[1,2,3];
	y:=x[2..1]; // error
}
